Fix and update reminder API
