# api.yml
@@ -207,6 +207,18 @@ paths:
     parameters:
       - $ref: '#/components/parameters/idUser'
       - $ref: '#/components/parameters/idReminder'
+    get:
+      responses:
+        '200':
+          description: The reminder is returnd successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/reminder'
+        '404':
+          $ref: "#/components/responses/NotFound"
+        '401':
+          $ref: "#/components/responses/Unauthorized"
     patch:
       requestBody:
         required: true
